--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>JavaScript Code Challenge</title>
-    <script type="text/javascript" src='./lib/jquery-3.2.1.js'></script>
   </head>
   <body>
 
     <form id="note-form">
-      <input type='text' />
+      <input id="comment" type='text' />
       <input type='submit' />
     </form>
+    <div hidden id="error">
+      <p> A comment must have text </p>
+    </div>
 
     <div id='comment-list'></div>
 
+    <script type="text/javascript" src='./lib/jquery-3.2.1.js'></script>
     <script type="text/javascript" src='src/CommentList.js'></script>
     <script type="text/javascript" src='src/Comment.js'></script>
     <script type="text/javascript" src='src/index.js'></script>
